v0.9.2, 01/12/2018 -- Minor revision
* Added TypedDict
* Added TypedTuple

v0.9.1, 01/12/2018 -- Minor revision
* Added type checkers for functions and methods
* Added validator for callables

v0.9.0, 01/12/2018 -- Initial release