@@ -1,6 +1,7 @@
 v0.9.2, 01/12/2018 -- Minor revision
 * Added TypedDict
 * Added TypedTuple
+* Refactored error messages for the All validators and type checkers
 
 v0.9.1, 01/12/2018 -- Minor revision
 * Added type checkers for functions and methods
